unpackaged/main/default/objects/Case/fields/RICSC_AgentName__c.field-meta.xml
<CustomField>
        <fullName>RICSC_AgentName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the customer service agent that opend the ticket</description>
        <label>Agent Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>RICSC_TicketsAgentName</relationshipName>
        <type>Lookup</type>
    </CustomField>