unpackaged/main/default/objects/Case/fields/RICSC_AnswerLogHistory__c.field-meta.xml
<CustomField>
        <fullName>RICSC_AnswerLogHistory__c</fullName>
        <description>History of answers provided by the customer service agent</description>
        <label>Answer Log History</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>