unpackaged/main/default/objects/Case/fields/RICSC_Boutique__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Boutique__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the Boutique</description>
        <label>Boutique</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases (Boutique)</relationshipLabel>
        <relationshipName>RICSC_TicketsBoutique</relationshipName>
        <type>Lookup</type>
    </CustomField>