unpackaged/main/default/objects/Case/fields/RICSC_CampaignName__c.field-meta.xml
<CustomField>
        <fullName>RICSC_CampaignName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the Campaign related to the ticket if applicable</description>
        <label>Campaign Name</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>RICSC_TicketsCamapignName</relationshipName>
        <type>Lookup</type>
    </CustomField>