unpackaged/main/default/objects/Case/fields/RICSC_Closed__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the ticket is closed or not</description>
        <label>Closed</label>
        <type>Checkbox</type>
    </CustomField>