unpackaged/main/default/objects/Case/fields/RICSC_DueDate__c.field-meta.xml
<CustomField>
        <fullName>RICSC_DueDate__c</fullName>
        <description>Due Date of the ticket</description>
        <label>Due Date</label>
        <type>Date</type>
    </CustomField>