unpackaged/main/default/objects/Case/fields/RICSC_EscalationNotes__c.field-meta.xml
<CustomField>
        <fullName>RICSC_EscalationNotes__c</fullName>
        <description>Notes related to the ticket escalation</description>
        <label>Escalation Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>