unpackaged/main/default/objects/Case/fields/RICSC_GoldenRecord__c.field-meta.xml
<CustomField>
        <fullName>RICSC_GoldenRecord__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to a Golden Record which has been created for the Account</description>
        <label>Golden Record</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Tickets</relationshipLabel>
        <relationshipName>RICSC_TicketsGoldenRecord</relationshipName>
        <type>Lookup</type>
    </CustomField>