unpackaged/main/default/objects/Case/fields/RICSC_Maison__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Maison__c</fullName>
        <description>List of Maisons to be able to drive</description>
        <label>Maison</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RICSC_Maison</valueSetName>
        </valueSet>
    </CustomField>