unpackaged/main/default/objects/Case/fields/RICSC_Product2__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Product2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Additional product related to this ticket</description>
        <label>Product2</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Tickets2</relationshipLabel>
        <relationshipName>RICSC_TicketsProduct2</relationshipName>
        <type>Lookup</type>
    </CustomField>