unpackaged/main/default/objects/Case/fields/RICSC_Product3__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Product3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Additional product related to this ticket</description>
        <label>Product3</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Tickets3</relationshipLabel>
        <relationshipName>RICSC_TicketsProduct3</relationshipName>
        <type>Lookup</type>
    </CustomField>