unpackaged/main/default/objects/Case/fields/RICSC_Product__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product related to this ticket</description>
        <label>Product1</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Tickets</relationshipLabel>
        <relationshipName>RICSC_TicketsProduct1</relationshipName>
        <type>Lookup</type>
    </CustomField>