unpackaged/main/default/objects/Case/fields/RICSC_Submotive__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Submotive__c</fullName>
        <description>Ticket sub-reason</description>
        <label>Submotive</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Reason</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Assisted phone order</fullName>
                </value>
                <value>
                    <fullName>Authenticity</fullName>
                </value>
                <value>
                    <fullName>Boutique appointment</fullName>
                </value>
                <value>
                    <fullName>Boutique information</fullName>
                </value>
                <value>
                    <fullName>Bridal</fullName>
                </value>
                <value>
                    <fullName>Buy back</fullName>
                </value>
                <value>
                    <fullName>Characteristics</fullName>
                </value>
                <value>
                    <fullName>Client data update</fullName>
                </value>
                <value>
                    <fullName>Collaboration / endorsement requests</fullName>
                </value>
                <value>
                    <fullName>Commercial offer</fullName>
                </value>
                <value>
                    <fullName>Complaint-Cost of service</fullName>
                </value>
                <value>
                    <fullName>Complaint - Delivery</fullName>
                </value>
                <value>
                    <fullName>Complaint - delivery delay</fullName>
                </value>
                <value>
                    <fullName>Complaint - Extra services</fullName>
                </value>
                <value>
                    <fullName>Complaint - network services / behaviour</fullName>
                </value>
                <value>
                    <fullName>Complaint - Product Quality</fullName>
                </value>
                <value>
                    <fullName>Complaint-Repair duration</fullName>
                </value>
                <value>
                    <fullName>Complaint-Repeat repair</fullName>
                </value>
                <value>
                    <fullName>Complaint - return/exchange</fullName>
                </value>
                <value>
                    <fullName>Conditions of Sales</fullName>
                </value>
                <value>
                    <fullName>Cost estimate</fullName>
                </value>
                <value>
                    <fullName>Counterfeit reported</fullName>
                </value>
                <value>
                    <fullName>Delivery follow-up</fullName>
                </value>
                <value>
                    <fullName>Detax</fullName>
                </value>
                <value>
                    <fullName>Digital</fullName>
                </value>
                <value>
                    <fullName>Direct shipment advice</fullName>
                </value>
                <value>
                    <fullName>Estimate approval</fullName>
                </value>
                <value>
                    <fullName>Estimate rejection</fullName>
                </value>
                <value>
                    <fullName>Extract of Archives</fullName>
                </value>
                <value>
                    <fullName>Human resources</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>