unpackaged/main/default/objects/Case/fields/RICSC_TicketNumber__c.field-meta.xml
<CustomField>
        <fullName>RICSC_TicketNumber__c</fullName>
        <description>Ticket Number</description>
        <label>Ticket Number</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>