unpackaged/main/default/objects/Case/fields/RICSC_TransferDetails__c.field-meta.xml
<CustomField>
        <fullName>RICSC_TransferDetails__c</fullName>
        <description>Details related to the ticket transfer</description>
        <label>Transfer Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>